# sudoku-lab

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  environment.yml  pyproject.toml
docs/: AUDIT_PROMPTS.md  AUDIT_REPORT.md  PROJECT_MANIFEST.md  SESSION_HANDOFF.md  VERSION_PLAN.md
notebooks/: 00_game.ipynb  01_backtracking.ipynb
scripts/: audit_pipeline.py  generate_manifest.py
src/sudoku/: __init__.py
src/sudoku/core/: sudoku.py
src/sudoku/game/: __init__.py  __main__.py  presets.py  renderer.py  state.py  sudoku_game.py
src/sudoku/solve/: __main__.py
src/sudoku/solvers/: __init__.py  backtracking.py  base.py
tests/: test_backtracking.py  test_base_solver.py  test_core.py  test_game.py
